Update hero section styles, prevent extra space under image on mobile

--- a/static/css/sections.less
+++ b/static/css/sections.less
@@ -13,7 +13,7 @@
         width: 100%;
         max-width: 1440px;
         margin: 0 auto;
-        padding-top: 60px;
+        padding-top: 90px;
 
         .hero--content {
             flex: 0 1 40%;
@@ -91,10 +91,11 @@
     @media (max-width: 1068px) {
         .hero {
             display: block;
+            padding-top: 90px;
 
             .hero--content {
                 display: block;
-                padding: 50px 0 20px 0;
+                padding: 0;
 
                 .wrapper {
                     padding: 60px;
@@ -106,8 +107,6 @@
             }
 
             .hero--image {
-                display: block;
-
                 img {
                     width: 100%;
                 }
